<resources>
    <string name="app_name">Memo Board</string>
    <string name="buscador">Find a memo</string>
    <string name="titulonota">Memo Title</string>
    <string name="detallesnota">Memo Details</string>
    <string name="verde">Green</string>
    <string name="azul">Blue</string>
    <string name="amarillo">Yellow</string>
    <string name="naranja">Orange</string>
    <string name="btnguardar">Save Memo</string>
    <string name="btneditar">Edit Memo</string>
    <string name="dialogsi">YES</string>
    <string name="dialogno">NO</string>
    <string name="dialogmensaje">Do you want delete memo?</string>
    <string name="actualizadofecha">Last Update: </string>
</resources>