<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAddActivity"
    android:background="@color/fondo"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ETpositName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/titulonota"
        android:fontFamily="@font/tiza"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/ETpositDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="@font/hand_normal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="start|top"
        android:hint="@string/detallesnota"
        android:maxLines="10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/radiogroup"
        app:layout_constraintTop_toBottomOf="@id/ETpositName"
        app:layout_constraintVertical_bias="0.09" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/idBtn"
        android:layout_marginBottom="20dp"
        android:gravity="center">
        <RadioButton
            android:id="@+id/radioverde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verde"
            android:fontFamily="@font/tiza"
            android:textColor="@color/verde"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/radioazul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/azul"
            android:fontFamily="@font/tiza"
            android:textColor="@color/azul" />
        <RadioButton
            android:id="@+id/radioamarillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amarillo"
            android:fontFamily="@font/tiza"
            android:textColor="@color/amarillo" />
        <RadioButton
            android:id="@+id/radionaranja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naranja"
            android:fontFamily="@font/tiza"
            android:textColor="@color/naranja" />
    </RadioGroup>

    <Button
        android:id="@+id/idBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/naranja"
        android:text="@string/btnguardar"
        android:fontFamily="@font/tiza"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>